# gestament

./: .gitignore  .prettierbanner  README.md  README_ja.md  README_pack.md  build.sh  build_package.sh  build_package_all.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
fixtures/gtk3-test-app/: meson.build
fixtures/gtk3-test-app/src/: main-window.ui  main.cpp
fixtures/gtk4-test-app/: meson.build
include/gestament/: gtk.h
native/: Makefile  accessible.cc  accessible.hpp  addon.cc  atspi_client.cc  atspi_client.hpp  tray.cc  tray.hpp
scripts/: build_native_prebuild_container.sh  platform_container_smoke.mjs  test_platform_container.sh
src/: displaySession.ts  element.ts  errors.ts  gestament-config.ts  gestament-display-session-host.ts  gestament-launcher-driver.ts  gestament-tray-host.ts  gestament-xvfb-pool-probe.ts  gestament-xvfb-worker.ts  gestament-xvfb.ts  gestament.ts  index.ts  input.ts  launchGtkApp.ts  launcherDriverProtocol.ts  native.ts  output.ts  prerequisites.ts  tesseract-js-data-eng.d.ts  testing.ts  tray.ts  types.ts  wait.ts
tests/: build-package-all.test.ts  gestament-cli.test.ts  gestament-config.test.ts  gestament-xvfb.test.ts  gtk-capture-testing.test.ts  gtk-element-types.test.ts  gtk-helper-header.test.ts  gtk3-visual.test.ts  gtk4-visual.test.ts  launchGtkApp.test.ts  output.test.ts  platform-container-smoke.test.ts  prerequisites.test.ts  readme-gestament-init.test.ts  test-artifacts.test.ts  wait.test.ts
tests/support/: artifactReporter.ts  captureAssertions.ts  imageAssertions.ts  process.ts  (+4 more)
(+2 files in other folders)
